force-app/main/default/objects/RS_Customer_Details__mdt/RS_Customer_Details__mdt.object-meta.xml
<CustomObject>
    <label>Customer Details</label>
    <pluralLabel>Customer Details</pluralLabel>
</CustomObject>