force-app/main/default/objects/RS_Customer_Details__mdt/fields/HighlightPanelColorCode__c.field-meta.xml
<CustomField>
    <fullName>HighlightPanelColorCode__c</fullName>
    <label>HighlightPanelColorCode</label>
    <type>TextArea</type>
</CustomField>