force-app/main/default/objects/RS_Customer_Details__mdt/fields/HighlightPanelLabels__c.field-meta.xml
<CustomField>
    <fullName>HighlightPanelLabels__c</fullName>
    <label>HighlightPanelLabels</label>
    <type>TextArea</type>
</CustomField>