force-app/main/default/objects/RS_Customer_Details__mdt/fields/KeyVariable__c.field-meta.xml
<CustomField>
    <fullName>KeyVariable__c</fullName>
    <label>KeyVariable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>