force-app/main/default/objects/RS_Customer_Details__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>15</length>
    <type>Text</type>
</CustomField>