force-app/main/default/objects/RS_Customer_Details__mdt/fields/RS_HighlightPanelFields__c.field-meta.xml
<CustomField>
    <fullName>RS_HighlightPanelFields__c</fullName>
    <label>HighlightPanelFields</label>
    <length>100</length>
    <type>Text</type>
</CustomField>